apps/harvester/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: harvester-service
  namespace: rancher
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 443
      name: http
